# frctl

./: Cargo.toml  LICENSE  README.org
src/: cli.rs  color.rs  fractals.rs  main.rs  math.rs  settings.rs
