[package]
name = "frctl"
version = "0.1.0"
authors = ["Tyler Ware <tyler.ware.777@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3", features = ["full"] }
image = "0.23.12"
rand = "0.7.3"
clap = "2.33.0"
